--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.17.1",
     "@tailwindcss/forms": "^0.5.10",
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
@@ -18,6 +19,7 @@
     "jspdf": "^3.0.1",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "prisma": "^6.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
