--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,14 @@
   "icons": [
     {
       "src": "/icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
